# ams-java

./: .dockerignore  .env.dev  .env.prod  .gitignore  AGENTS.md  ATTENDANCE_SERVICE_COMPLETION_GUIDE.md  ATTENDANCE_SERVICE_ENDPOINT_TESTING.md  BUILD_SEETAFACE6.md  CODEBASE_CLEANUP_SUMMARY.md  COMPLETE_FLOW_SUMMARY.md  COMPLETE_SYSTEM_TEST.md  COMPREHENSIVE_SHARED_LIB_CLEANUP_STRATEGY.md  CONTRIBUTING.md  DASHBOARD_REDESIGN_SUMMARY.md  DJL_FACE_RECOGNITION_SETUP.md  DJL_INTEGRATION_GUIDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  ENDPOINT_TESTING_RESULTS_AND_FIXES.md  FINAL_ENTITY_ADMIN_LOGIN_TEST.ps1  FINAL_HTML_SOLUTION_STATUS.md  FINAL_QR_SOLUTION_VERIFIED.md  FINAL_QR_TEST_RESULTS.md  FINAL_SUCCESS_SUMMARY.md  HIGH_PRIORITY_TODO_TASKS.md  HTML_SOLUTION_SUCCESS.md  JWT_AUTHENTICATION_FLOW_ANALYSIS.md  LICENSE  MICROSERVICES_ARCHITECTURE.md  MICROSERVICES_DEPLOYMENT_GUIDE.md  MICROSERVICES_ENDPOINT_TESTING_RESULTS.md  MICROSERVICES_ENDPOINT_TESTING_TODO.md  MICROSERVICES_SUCCESS_SUMMARY.md  MICROSERVICES_TESTING_EXECUTION_GUIDE.md  MICROSERVICES_TESTING_PLAN.md  MICROSERVICES_TESTING_REAL_STATUS.md  ONNX_FACE_RECOGNITION_SETUP.md  ORGANIZATION_SERVICE_SUPERADMIN_ANALYSIS.md  PROJECT_OVERVIEW_AND_STATUS.md  PROJECT_ROOT_CLEANUP_SUMMARY.md  (+62 more)
admin-panel/: .env  Dockerfile  nginx.conf  package-lock.json  package.json
docs/: API.md
entity-admin-android/: build.gradle  local.properties
entity-dashboard/: Dockerfile  nginx.conf  package-lock.json  package.json
infrastructure/: GenerateBCryptHash.java  docker-compose.frontend.yml  docker-compose.individual.yml  docker-compose.microservices.yml  docker-compose.prod.yml
mreview/: AuthServiceGrpcClient.java
public-menu/: .env  Dockerfile  package-lock.json
scripts/: build-all-services.ps1  build-jni-linux.sh  build-jni-windows.bat  build-seetaface6-from-source.py  compare-endpoints.ps1  create-dockerfiles.bat  create-microservice-configs.bat  create-microservices-structure.bat  create-mock-jni.py  create-mock-seetaface6.py  deploy-docker-only.bat  deploy-docker.bat  deploy-docker.sh  deploy-microservices.bat  deploy.sh  download-seetaface6.md  extract-microservices.bat  extract-remaining-services.bat  fix-imports-simple.bat  fix-package-imports.bat  fix-package-imports.ps1  monitor.sh  (+12 more)
src/main/cpp/: CMakeLists.txt  seetaface_jni.cpp
(+915 files in other folders)
